--- a/_config.yml
+++ b/_config.yml
@@ -11,5 +11,4 @@ theme: minima
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
 github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
 
-show_excerpts: true # set to false to remove excerpts on the homepage
-break it:     gtrhe
+show_excerpts: true # set to false to remove excerpts on the homepa
