--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
-title: Your awesome title
+title: Tammy's page
 author: GitHub User
 email: your-email@domain.com
 description: >
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is my awesome website!
 theme: jekyll-theme-merlot
 
 # social links
