--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,13 @@
-title: Tammy's page
-author: GitHub User
-email: your-email@domain.com
-description: >
-  This is my awesome website!
-theme: jekyll-theme-merlot
+title: >_☁ MSShells.net
+email: andresg@capazero.net
+description: >- # this means to ignore newlines until "baseurl:"
+  This site aims to keep track of the -current- Official Microsoft PowerShell modules to administer Microsoft 365 and Azure. Contributions are welcomed!
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://www.msshells.net" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: andresgorzelany
+github_username:  get-itips
 
-# social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
-
-show_excerpts: true # set to false to remove excerpts on the homepa
+# Build settings
+theme: jekyll-theme-cayman
+plugins:
+  - jekyll-feed
