--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: ☁ MSShells.net
+title: _☁ MSShells.net
 email: andresg@capazero.net
 description: >- # this means to ignore newlines until "baseurl:"
   This site aims to keep track of the -current- Official Microsoft PowerShell modules to administer Microsoft 365 and Azure. Contributions are welcomed!
